WIP: Bump upstreams for 2022.09 Chlorine
Adopt the following versions:
- odlparent-11.0.0
- infrautils-4.0.0
- yangtools-9.0.0
- mdsal-10.0.0
- controller-6.0.0
- aaa-0.16.0
- netconf-4.0.0-SNAPSHOT

Change-Id: I124b237a6fb07e2ec26c26785767fb5b9f0bc2fb
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>